# my-python-template

./: .buildinfo  .gitattributes  .pre-commit-config.yaml  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.github/workflows/: auto_tagging.yml  gh_pages.yml
docs/: conf.py  index.rst
