[project]
name = "my-python-template"
version = "0.0.0"
description = ""
authors = [
    {name = "mtouzot",email = "martin.touzot@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.black]
line-length = 79

[tool.poetry.group.docs.dependencies]
setuptools = "^75.8.0"
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"
sphinx-favicon = "^1.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
